不要なcss削除一部scssへ

--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -1,9 +1,9 @@
 .item-review-title {
-  height: 110px;
+  word-break: break-all;
   color: #aa998a;
   font-size: 40px;
   font-weight: 900;
-  line-height: 110px;
+  margin-bottom: 20px;
 }
 
 .shop-contents-link {
