--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -10,13 +10,13 @@
   display: flex;
   &__image {
     border-radius: 4px;
-    height: 100%;
-    width: 40%;
+    height: 430px;
+    width: 320px;
     max-width: 100%;
   }
   &__main {
     word-break: break-all;
-    width: 60%;
+    width: calc(100% - 320px);
     height: 100%;
     padding: 20px;
   }
