--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,7 +10,7 @@
 
     <%# 商品詳細情報 %>
     <div class="item-detail">
-      <%= image_tag @item.images[0], class: "item-detail__image" %>
+      <%= image_tag @item.images[0].variant(gravity: :center, resize:"320x430^",crop:"320x430+0+0").processed, class: "item-detail__image" %>
       <div class="item-detail__main">
         <p><%= @item.explanation %></p>
       </div>
